Import of CHIPT/RPM2-0.67 from CPAN.
gitpan-cpan-distribution: RPM2
gitpan-cpan-version:      0.67
gitpan-cpan-path:         CHIPT/RPM2-0.67.tar.gz
gitpan-cpan-author:       CHIPT
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.67  2006-09-24 cturner@pattern.net
+	* no code changes, just license clarification
+
 0.66  2004-04-14 cturner
 	* add changelog support and doc updates from Ville Skytta <ville.skytta@iki.fi>
 
