--- a/README
+++ b/README
@@ -1,16 +1,7 @@
-RPM2 version 0.01
+RPM2 version 0.67
 =================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+See the documentation in RPM2.pm ("perldoc RPM2.pm") for module usage.
 
 INSTALLATION
 
@@ -25,11 +16,9 @@ DEPENDENCIES
 
 This module requires these other modules and libraries:
 
-  blah blah blah
+  rpm (generally in the rpm-devel package)
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2001 A. U. Thor blah blah blah
+Copyright (C) 2006 Chip Turner
 
