Import of LKUNDRAK/RPM2-1.0 from CPAN.
gitpan-cpan-distribution: RPM2
gitpan-cpan-version:      1.0
gitpan-cpan-path:         LKUNDRAK/RPM2-1.0.tar.gz
gitpan-cpan-author:       LKUNDRAK
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+1.0   2011-04-01 lkundrak@v3.sk
+        * Tidy-ups, drop ancient version compatibility
+
 0.70  2011-04-01 lkundrak@v3.sk
         * Compaibility fixes for older RPMs
 
